[gd_scene format=3 uid="uid://d2uoe8m86j705"]

[ext_resource type="Script" uid="uid://b6ofchgmihf7n" path="res://Scripts/material_maker_popup.gd" id="1_nm0qf"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ly81t"]
size = Vector2(160, 160)

[sub_resource type="LabelSettings" id="LabelSettings_ly81t"]
font_size = 24

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8jv12"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_q1kmd"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p16kk"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_541bs"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_l1qf3"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_nm0qf"]
size = Vector2(16, 16)

[node name="MaterialMakerPopup" type="PopupPanel" unique_id=322081167]
oversampling_override = 1.0
title = "Material Maker"
initial_position = 1
size = Vector2i(640, 570)
borderless = false
script = ExtResource("1_nm0qf")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=603453763]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Preview" type="TextureRect" parent="VBoxContainer" unique_id=35819306]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_ly81t")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer" unique_id=1268635772]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Material Name"
alignment = 1

[node name="TopTexture" type="Label" parent="VBoxContainer" unique_id=1284278204]
layout_mode = 2
text = "Top Texture"
label_settings = SubResource("LabelSettings_ly81t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=1641150648]
layout_mode = 2

[node name="Texture" type="Label" parent="VBoxContainer/TextureHBox" unique_id=2030118764]
layout_mode = 2
text = "Texture: "

[node name="TopTextureBtn" type="Button" parent="VBoxContainer/TextureHBox" unique_id=1238896825]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Choose"
icon = SubResource("PlaceholderTexture2D_8jv12")

[node name="NormalHbox" type="HBoxContainer" parent="VBoxContainer" unique_id=1136954647]
layout_mode = 2

[node name="Normal" type="Label" parent="VBoxContainer/NormalHbox" unique_id=1612207708]
layout_mode = 2
text = "Normal: "

[node name="TopNormalBtn" type="Button" parent="VBoxContainer/NormalHbox" unique_id=138782888]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Choose"
icon = SubResource("PlaceholderTexture2D_q1kmd")

[node name="SideTextures" type="Label" parent="VBoxContainer" unique_id=1750517451]
layout_mode = 2
text = "Side Texture"
label_settings = SubResource("LabelSettings_ly81t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureHBox2" type="HBoxContainer" parent="VBoxContainer" unique_id=1135561112]
layout_mode = 2

[node name="Texture" type="Label" parent="VBoxContainer/TextureHBox2" unique_id=1427188646]
layout_mode = 2
text = "Texture: "

[node name="SideTextureBtn" type="Button" parent="VBoxContainer/TextureHBox2" unique_id=691458818]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Choose"
icon = SubResource("PlaceholderTexture2D_p16kk")

[node name="NormalHbox2" type="HBoxContainer" parent="VBoxContainer" unique_id=1374660069]
layout_mode = 2

[node name="Normal" type="Label" parent="VBoxContainer/NormalHbox2" unique_id=452604705]
layout_mode = 2
text = "Normal: "

[node name="SideNormalBtn" type="Button" parent="VBoxContainer/NormalHbox2" unique_id=2116936430]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Choose"
icon = SubResource("PlaceholderTexture2D_541bs")

[node name="BottomTexture" type="Label" parent="VBoxContainer" unique_id=1169965262]
layout_mode = 2
text = "Bottom Texture"
label_settings = SubResource("LabelSettings_ly81t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureHBox3" type="HBoxContainer" parent="VBoxContainer" unique_id=896406698]
layout_mode = 2

[node name="Texture" type="Label" parent="VBoxContainer/TextureHBox3" unique_id=830679280]
layout_mode = 2
text = "Texture: "

[node name="BottomTextureBtn" type="Button" parent="VBoxContainer/TextureHBox3" unique_id=1472408257]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Choose"
icon = SubResource("PlaceholderTexture2D_l1qf3")

[node name="NormalHbox3" type="HBoxContainer" parent="VBoxContainer" unique_id=1022335860]
layout_mode = 2

[node name="Normal" type="Label" parent="VBoxContainer/NormalHbox3" unique_id=553351914]
layout_mode = 2
text = "Normal: "

[node name="BottomNormalBtn" type="Button" parent="VBoxContainer/NormalHbox3" unique_id=323689767]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Choose"
icon = SubResource("PlaceholderTexture2D_nm0qf")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1972389001]
layout_mode = 2

[node name="ButtonContainers" type="HBoxContainer" parent="VBoxContainer" unique_id=185231005]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonContainers" unique_id=1856933247]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainers" unique_id=817036417]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Cancel"
